--- a/macros.tex
+++ b/macros.tex
@@ -59,9 +59,10 @@
 \theoremstyle{plain}
 \newtheorem*{definition}{Definition}
 
-\theoremstyle{remark}
+%\theoremstyle{remark}
 \newtheorem{cor}{Corollary}
 \newtheorem*{remark}{Remark}
+\theoremstyle{remark}
 \newtheorem*{example}{Example}
 
 \newcommand{\bigO}{\mathcal{O}}
