--- a/thesis.tex
+++ b/thesis.tex
@@ -7,7 +7,7 @@
 	\usepackage[utf8]{inputenc}
 	\usepackage[english]{babel}
 	\usepackage{amsmath, amsthm, amssymb}
-	%\usepackage{graphicx, tabularx}
+	\usepackage{graphicx, tabularx}
 	\usepackage{mathtools}
 	\usepackage{nomencl}
 	\usepackage[font=small]{caption}
@@ -51,7 +51,7 @@
 	\usepackage{bm}             % boldface symbols (\bm)
 	\usepackage{graphicx}       % embedding of pictures
 	\usepackage{fancyvrb}       % improved verbatim environment
-	\usepackage{natbib}         % citation style AUTHOR (YEAR), or AUTHOR [NUMBER]
+	\usepackage[round]{natbib}         % citation style AUTHOR (YEAR), or AUTHOR [NUMBER]
 	\usepackage[nottoc]{tocbibind} 
 					% makes sure that bibliography and the lists
 				    % of figures/tables are included in the table
@@ -118,22 +118,25 @@
 \include{macros}
 
 \begin{document}
-
 \include{title}
 
-\openright
-\pagestyle{plain}
-\pagenumbering{arabic}
-\setcounter{page}{1}
-
-%\thispagestyle{empty} % to suppress page number
-%\pagebreak
+%%% A page with automatically generated table of contents of the bachelor thesis
 
 \tableofcontents
 
+%%% Each chapter is kept in a separate file
+\include{preface}
 \include{chap1}
 \include{chap2}
 
+\include{epilog}
+
+%%% Bibliography
 \include{bibliography}
 
+%%% Abbreviations used in the thesis, if any, including their explanation
+%%% In mathematical theses, it could be better to move the list of abbreviations to the beginning of the thesis.
+%\chapwithtoc{List of Abbreviations}
+
+\openright
 \end{document}
