--- a/preface.tex
+++ b/preface.tex
@@ -1,4 +1,4 @@
 \chapter*{Introduction}
 \addcontentsline{toc}{chapter}{Introduction}
 
-The pole shifting theorem is one of the basic results of the theory of linear dynamical systems with linear feedback. It claims that in case of controllable systems one can achieve an arbitrary asymptotic behavior by a suitably chosen feedback. To understand this crucial theorem, we must first describe few basic concepts.
+The pole shifting theorem is one of the basic results of the theory of linear dynamic systems with linear feedback. It claims that in case of controllable systems one can achieve an arbitrary asymptotic behavior by a suitably chosen feedback. To understand this crucial theorem, we must first describe a few basic concepts.
