--- a/chap2.tex
+++ b/chap2.tex
@@ -9,7 +9,7 @@ The following chapter is based on the first section of the fifth chapter of \cit
         \begin{pmatrix}
             0 & 1 & 0 & \cdots & 0 \\
             0 & 0 & 1 & \cdots & 0 \\
-            \cdots & \cdots & \cdots & \ddots & \vdots \\
+            \vdots & \vdots & \vdots & \ddots & \vdots \\
             0 & 0 & 0 & \cdots & 1 \\
             \alpha_1 & \alpha_2 & \alpha_3 & \cdots & \alpha_n \\
         \end{pmatrix},
@@ -32,7 +32,7 @@ The following chapter is based on the first section of the fifth chapter of \cit
 \end{lemma}
 
 \begin{proof}
-    Can be shown using simple properties of the matrix determinant.
+    It can be shown using simple properties of the matrix determinant.
 \end{proof}
 
 \begin{lemma}
@@ -59,7 +59,7 @@ The following chapter is based on the first section of the fifth chapter of \cit
 
 \begin{lemma}
 \label{lem:simCont}
-    Let $\K$ be a field and let $A_1,A_2\in\K^{n\times n},b_1,b_2\in\K^n$, such that the pairs $(A_1,b_1),(A_2,b_2)$ are controllable. If the characteristic polynomials of $A_1$ and $A_2$ are the same, then the pairs $(A_1,b_1),(A_2,b_2)$ are similar.
+    Let $\K$ be a field and let $A_1,A_2\in\K^{n\times n}$ and $b_1,b_2\in\K^n$, such that the pairs $(A_1,b_1),(A_2,b_2)$ are controllable. If the characteristic polynomials of $A_1$ and $A_2$ are the same, then the pairs $(A_1,b_1),(A_2,b_2)$ are similar.
 \end{lemma}
 
 \begin{proof}
@@ -90,11 +90,11 @@ The following chapter is based on the first section of the fifth chapter of \cit
             Ab & A^2b & \ldots & A^nb
         \end{pmatrix}
     =A\mathbf{R}(A,b)\ .$$
-    By controllability of $(A,b)$ is the column space of the matrix $\mathbf{R}(A,b)$ of dimension $n$, which means, that the matrix is invertible. Therefore, we can write 
+    By the controllability of the pair $(A,b)$, the column space of the matrix $\mathbf{R}(A,b)$ is of dimension $n$, which means, that the matrix is invertible. Therefore, we can write 
     $$A=\mathbf{R}(A,b)A^\dagger\mathbf{R}(A,b)^{-1}\ .$$
     We see that the matrices $A$ and $A^\dagger$ are similar. It is also true that $$\mathbf{R}(A,b)b^\dagger=b\ .$$ Therefore $(A,b)\sim(A^\dagger,b^\dagger)$.
 
-    Since the pair $(A^\dagger,b^\dagger)$ depends only on the characteristic polynomial of the matrix $A$, we conclude by the transitivity of the matrix similarity, that any two controllable pairs with the same characteristic polynomials are similar to each other.
+    Since the pair $(A^\dagger,b^\dagger)$ depends only on the characteristic polynomial of the matrix $A$, we conclude by transitivity of the matrix similarity, that any two controllable pairs with the same characteristic polynomials are similar to each other.
 \end{proof}
 
 \begin{cor}
@@ -149,11 +149,11 @@ The following chapter is based on the first section of the fifth chapter of \cit
     $$\chi_{A+BF}=\chi_{A_1+B_1F_1}\chi_{A_3}=\chi_{A_1+B_1F_1}\chi_u$$
     We see that any assignable polynomial is a multiple of the uncontrollable part $\chi_u$.
 
-    Conversely, we want to show that the first factor can be made arbitrary by a suitable choice of $F_1$. This does make sense only for $r>0$, otherwise the assignable polynomial is equal to $\chi_u$, which cannot be changed by modifying the matrix $F$. Assume that we are given a monic polynomial $\chi$. If we find such a matrix $F_1$ that 
+    Conversely, we want to show that the first factor can be made arbitrary by a suitable choice of $F_1$. This makes sense only for $r>0$, otherwise the assignable polynomial is equal to $\chi_u$, which cannot be changed by modifying the matrix $F$. Assume that we are given a monic polynomial $\chi$. If we find such a matrix $F_1$ that 
     $$\chi_{A_1+B_1F_1}=\chi$$
-    then by putting $F=(F_1,0)$ we get the desired characteristic polynomial, that is, $\chi_{A+BF}=\chi\chi_u$. Since the pair $(A_1,B_1)$ is controllable as shown in Lemma \ref{lem:A_1B_1controllable}, it is sufficient only to prove that controllable systems can be assigned an arbitrary monic polynomial $\chi$ or respective degree. Therefore, from this point on, we assume that the pair $(A,B)$ is controllable.
+    then by putting $F=(F_1,0)$ we get the desired characteristic polynomial, that is, $\chi_{A+BF}=\chi\chi_u$. Since the pair $(A_1,B_1)$ is controllable as shown in Lemma \ref{lem:A_1B_1controllable}, it is sufficient only to prove that controllable systems can be assigned an arbitrary monic polynomial $\chi$ of respective degree. Therefore, from this point on, we assume that the pair $(A,B)$ is controllable.
 
-    We will first prove the theorem for the case $m=1$ and then we will express a general case as the case $m=1$. That will conclude the proof.
+    We will first prove the theorem for $m=1$ and then we will generalize it. That will conclude the proof.
 
     Let $m=1$. By Lemma \ref{lem:simPairsAssignablePolynomial} and Corollary \ref{cor:controllerForm} we can consider the pair $(A,b)$ to be in the controller form. For a vector 
     \begin{equation*}
@@ -199,20 +199,20 @@ The following chapter is based on the first section of the fifth chapter of \cit
     $$f=\begin{pmatrix}
         \beta_1-\alpha_1&\beta_2-\alpha_2&\ldots&\beta_n-\alpha_n
     \end{pmatrix}\ ,$$
-    and the equality $\chi_{A+bf}=\chi$ will be satisfied. We have shown that for the case $m=1$, the controllable pair $(A,b)$ can be assigned an arbitrary monic polynomial of degree $n$.
+    and the equality $\chi_{A+bf}=\chi$ will be satisfied. We have shown that for the case where $m=1$, the controllable pair $(A,b)$ can be assigned an arbitrary monic polynomial of degree $n$.
 
-    For a general case, where $m$ is arbitrary, we choose any vector $v\in\K^m$ such that $Bv\neq \nullvector$, and let $b=Bv$. We will use the fact that for any matrix $G\in\K^{m\times n}$ a pair $(A+BG,b)$ can be assigned the same polynomials as the pair $(A,B)$, because for any $f\in\K^{1\times n}$ it holds
+    For the general case, where $m$ is arbitrary, we choose any vector $v\in\K^m$ such that $Bv\neq \nullvector$ and let $b=Bv$. TODODODO We will use the fact that for any matrix $G\in\K^{m\times n}$ the pair $(A+BG,b)$ can be assigned the same polynomials as the pair $(A,B)$, because for any $f\in\K^{1\times n}$ it holds
     $${A+BG+bf}={A+BG+Bvf}={A+B(G+vf)}$$
     and therefore, for $F=G+vf$ we have 
     $$\chi_{A+BG+bf}=\chi_{A+BF}\ .$$
     Using the result for $m=1$, the proof will be concluded by showing that the pair $(A+BG,b)$ is controllable.
        
-    Let us have a of linearly independent vectors $\{Bv=x_1,\ldots,x_k\}$, $x_i\in\K^n$, where
+    Let us have a sequence of linearly independent vectors $\{Bv=x_1,\ldots,x_k\}$, $x_i\in\K^n$, where
     \begin{equation}
     \label{eq:indSeq}
         x_{i}=Ax_{i-1}+Bu_{i-1},\ i\in\{1,\ldots,k\}
     \end{equation}
-    for some $u_i\in\K^m$, and $x_0=\nullvector$, and assume that $k$ is as large as possible. We denote $\mathcal{V}=\text{Im}(x_1,\ldots,x_k)$. By maximality of $k$ we have $x_{k+1}\in\mathcal{V}$, which implies that
+    for some $u_i\in\K^m$, and $x_0=\nullvector$, and assume that $k$ is as large as possible. We denote $\text{Im}(x_1,\ldots,x_k)$ by $\mathcal{V}$. By maximality of $k$ we have $x_{k+1}\in\mathcal{V}$, which implies that
     \begin{equation}
     \label{eq:inV}    
         Ax_k+Bu=x_{k+1}\in\mathcal{V}
@@ -226,7 +226,7 @@ The following chapter is based on the first section of the fifth chapter of \cit
     $$Bu=x_{k+1}-Ax_k\in\mathcal{V}\ ,$$
     which implies that the column space $\mathcal{B}=\text{Im}B$ is included in $\mathcal{V}$. Following from this and the equality (\ref{eq:indSeq}), we have 
     $$Ax_{i-1}=x_i-Bu_{i-1}\in\mathcal{V}$$
-    for $i\in\{1,\ldots,k\}$. This result together with the equation (\ref{eq:AxkinV}) shows that for any $i\in\{1,\ldots,k\}$ it is true $Ax_i\in\mathcal{V}$. This means, that $\mathcal{V}$ is an $A$-invariant subspace containing $\mathcal{B}$. Using these two facts and the fact that for any two matrices $A_{n\times m},B_{m\times o}$ it holds $A(\text{Im}(B))=\{Av|v\in\text{Im(B)}\}=\text{Im}(AB)$, one can then construct a sequence
+    for $i\in\{1,\ldots,k\}$. This result together with the equation (\ref{eq:AxkinV}) shows that for any $i\in\{1,\ldots,k\}$ it is true that $Ax_i\in\mathcal{V}$. This means, that $\mathcal{V}$ is an $A$-invariant subspace containing $\mathcal{B}$. Using these two facts and the fact that for any two matrices $A_{n\times m},B_{m\times o}$ it holds that $A(\text{Im}(B))\stackrel{def.}{=\joinrel=}\{Av|v\in\text{Im(B)}\}=\text{Im}(AB)$, one can see that 
     \begin{align*}
         \mathcal{B}&\subseteq\mathcal{V} \\
         A\mathcal{B}&\subseteq A\mathcal{V}\subseteq\mathcal{V} \\
@@ -235,18 +235,18 @@ The following chapter is based on the first section of the fifth chapter of \cit
         A^{n-1}\mathcal{B}&\subseteq\mathcal{V}
         \ .
     \end{align*}
-    We can now see
+    Therefore, it holds
     $$\mathcal{R}(A,B)=\text{Im}(B|AB|A^2B|\ldots|A^{n-1}B)\subseteq\mathcal{V}\ .$$
     By controllability of $\mathcal{R}(A,B)$, we obtain
     $$n=\text{dim}\mathcal{R}(A,B)\leq\text{dim}\mathcal{V}=k\leq\text{dim}\K^n=n\ .$$
-    This implies $k=n$, $\mathcal{V}=\K^n$.
+    This implies that $k=n$, $\mathcal{V}=\K^n$.
 
     Finally, we need to show that
     $$\text{dim}\mathcal{R}(A+BG,x_1)=n\ .$$
 
-    Let us define a linear mapping $g\colon\mathcal{V}\to\mathcal{B}\subset \mathcal{V}$ by equation $g(x_i)=u_i$ for every $i\in\{1,\dots,n-1\}$, where $u_i$ is element such that $Ax_i+Bu_i=x_{i+1}$. This definition is correct and unique since the vectors $v_i$ form a basis for $\mathcal{V}$ \citep[see][Tvrzení 6.4]{Barto}. Let $G$ be the matrix of the linear mapping $g$ with respect to the standard basis. Then for every $i\in\{1,\ldots,n-1\}$ we have
+    Let us define a linear mapping $g\colon\mathcal{V}\to\mathcal{B}\subset \mathcal{V}$ by the equation $g(x_i)=u_i$ for every $i\in\{1,\dots,n-1\}$, where $u_i$ is  such an element that $Ax_i+Bu_i=x_{i+1}$. This definition is correct and unique since the vectors $v_i$ form a basis of $\mathcal{V}$ \citep[see][Tvrzení 6.4]{Barto}. Let $G$ be the matrix of the linear mapping $g$ with respect to the standard basis. Then for every $i\in\{1,\ldots,n-1\}$ we have
     $$(A+BG)x_i=Ax_i+BGx_i=Ax_i+Bu_i=x_{i+1}\ .$$
     It follows 
     $$\mathcal{R}(A+BG,x_1)=\text{Im}(x_1,(A+BG)x_1,\ldots,(A+BG)^{n-1}x_1)=\text{Im}(x_1,x_2,\ldots,x_n)\ .$$
-    Finally, by linear independence of the vectors $x_1,\ldots,x_n$, it holds $\text{dim}\mathcal{R}(A+BG,x_1)=n$. We have shown that the pair $\mathcal{R}(A+BG,Bv)$ is controllable, and thus the proof is concluded.
+    Finally, by linear independence of the vectors $x_1,\ldots,x_n$, it holds that $\text{dim}\mathcal{R}(A+BG,x_1)=n$. We have shown that the pair $\mathcal{R}(A+BG,Bv)$ is controllable, and thus the proof is concluded.
 \end{proof}
