fixed e^A+B left to fix continousness$

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -24,6 +24,14 @@
   year   = {2019},
 }
 
+@misc{Klain,
+  author  = {Dan Klain},
+  title   = {The Matrix Exponential (with exercises)},
+  note    = {Lecture notes on matrix exponentials, available at \url{http://faculty.uml.edu/dklain/}},
+  month   = sep,
+  year    = {2018},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 %
