--- a/chap1.tex
+++ b/chap1.tex
@@ -136,6 +136,16 @@ For this definition to make sense, we need to show that the series converges for
 \end{definition}
 
 \begin{lemma}
+\label{lem:matrixTimesVectorDerivative}
+	For a matrix function $A(t)\colon\R\to\K^{n\times m}$ and a vector function \linebreak $v(t)\colon\R\to\K^m$ it holds 
+	$$\frac{d}{dt}\left(A(t)v(t)\right)=\left(\frac{d}{dt}A(t)\right)v(t)+A(t)\frac{d}{dt}v(t)$$
+\end{lemma}
+	
+\begin{proof}
+	Can be simply shown by rewriting the vector $A(t)v(t)$ elementwise.
+\end{proof}
+
+\begin{lemma}
 \label{lem:expprop}
 	Let $A$, $B$ and $X$ be real or complex $n\times n$ matrices. Then 
 	\begin{enumerate}
@@ -166,42 +176,25 @@ For this definition to make sense, we need to show that the series converges for
 			\frac{d}{dt}e^{tX}=\left(\frac{d}{dt}e_{i,j}(t)\right)_{n\times n}=\left(\sum^\infty_{k=0}\frac{t^{k}}{k!}a^{(k+1)}_{i,j}\right)_{n\times n}=\sum^\infty_{k=0}\frac{t^k}{k!}X^{k+1}=X\sum^\infty_{k=0}\frac{t^k}{k!}X^{k}=Xe^{tX}\ .
 		\end{longeq}
 
-		\item Let $A^kB^l=(\alpha^{(k,l)}_{i,j})_{n\times n}$. Then
+		\item For the following proof we use \citet[Theorem 5]{Klain}.
+		
+		Consider the function $g(t)=e^{t(A+B)}e^{-tB}e^{-tA}$. By the first and third points and by Lemma \ref{lem:matrixTimesVectorDerivative}, we have that for any $t\in\R$ 
 		\begin{align*}
-			e^{A+B}
-			&=\sum^\infty_{k=0}\frac{1}{k!}(A+B)^{k}
-			=\sum^\infty_{k=0}\sum^k_{l=0}\binom{k}{l}\frac{1}{k!}A^{l}B^{k-l}=\sum^\infty_{k=0}\sum^k_{l=0}\frac{1}{l!(k-l)!}A^{l}B^{k-l}
+			g'(t)
+			=&(A+B)e^{t(A+B)}e^{-tB}e^{-tA}+e^{t(A+B)}(-B)e^{-tB}e^{-tA}
 			\\
-			&=\left(\sum^\infty_{k=0}\sum^k_{l=0}\frac{1}{l!(k-l)!}\alpha^{(l,k-l)}_{i,j}\right)_{n\times n}
-			=\left(\sum^\infty_{k=0}\sum^\infty_{l=0}\frac{1}{k!l!}\alpha^{(k,l)}_{i,j}\right)_{n\times n}
+			&\qquad\qquad\qquad\qquad\quad\quad +e^{t(A+B)}e^{-tB}(-A)e^{-tA}
 			\\
-			&=\sum^\infty_{k=0}\sum^\infty_{l=0}\frac{1}{k!l!}A^kB^l
-			=\sum^\infty_{k=0}\left(\frac{1}{k!}A^{k}\sum^\infty_{l=0}\frac{1}{l!}B^{l}\right)
+			=&(A+B)g(t)-Bg(t)-Ag(t)
 			\\
-			&=\sum^\infty_{k=0}\frac{1}{k!}A^{k}\cdot\sum^\infty_{l=0}\frac{1}{l!}B^{l}
-			=e^{A}e^{B}\ .
+			=&O_{n\times n}\ .
 		\end{align*}
-		The second equality holds by the assumption that $AB=BA$, and the last three equalities hold by Lemma \ref{lem:matrixSeriesFactoring}. The crucial point is the fifth equality, in which we reorder the elements of the series as depicted in Figure \ref{fig:reordering}. 
-		\begin{figure}[hp]
-			\centering
-			\includegraphics[width=70mm]{reordering_cropped.pdf}
-			\captionsetup{justification=centering,margin=2cm}
-			\captionof{figure}{}
-			\label{fig:reordering}
-		\end{figure}
-		%\begingroup
-		%\renewcommand*{\arraystretch}{1.5}
-		%$$
-		%\begin{matrix}
-		%	\alpha^{(0,0)}_{(i,j)} & \alpha^{(0,1)}_{(i,j)} & \alpha^{(0,2)}_{(i,j)} & \alpha^{(0,3)}_{(i,j)} & \ldots \\
-		%	\alpha^{(1,0)}_{(i,j)} & \alpha^{(1,1)}_{(i,j)} & \alpha^{(1,2)}_{(i,j)} & \alpha^{(1,3)}_{(i,j)} & \ldots \\
-		%	\alpha^{(2,0)}_{(i,j)} & \alpha^{(2,1)}_{(i,j)} & \alpha^{(2,2)}_{(i,j)} & \alpha^{(2,3)}_{(i,j)} & \ldots \\
-		%	\alpha^{(3,0)}_{(i,j)} & \alpha^{(3,1)}_{(i,j)} & \alpha^{(3,2)}_{(i,j)} & \alpha^{(3,3)}_{(i,j)} & \ldots \\
-		%	\vdots & \vdots & \vdots & \vdots & \ddots
-		%\end{matrix}
-		%$$
-		%\endgroup
-		The equality holds as long as the original series is absolutely convergent, which is satisfied since every element of the matrix $e^{A+B}$ converges absolutely by Corollary \ref{cor:elementConvergence}.
+		This implies, that the matrix $g(t)$ is a constant matrix. For any $t\in\R$, it therefore holds
+		$$g(t)=g(0)=e^{0(A+B)}e^{-0A}e^{-0B}=e^Oe^Oe^O=I_n\ ,$$
+		and hence
+		$$I=g(t)=e^{t(A+B)}e^{-tB}e^{-tA}\ .$$
+		Finally, after right multiplying both sides by $e^{tA}e^{tB}$, we obtain
+		$$e^{tA}e^{tB}=e^{t(A+B)}\ .$$
 	\end{enumerate}
 \end{proof}
 
@@ -409,12 +402,12 @@ $$\text{Im}(B|AB|\cdots|A^{n-1}B)\ .$$
 \begin{definition}
 	Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. The matrix $$\mathbf{R}(A,B)=(B|AB|\cdots|A^{n-1}B)$$ is called the \termdef{rechability matrix} of $(A,B)$. We define the \termdef{reachable space} $\mathcal{R}(A,B)$ of the pair $(A,B)$ as $\text{Im}(\mathbf{R}(A,B))$. 
 \end{definition}
-TODODO
+
 \begin{definition}
 	Let $\K$ be a field, $\mathcal{V} \subseteq \K^n$ be a vector space and let $A\in\K^{m\times n}$. Then we define the product of the left multiplication of the space $\mathcal{V}$ by the matrix $A$ as the set $A\cdot\mathcal{V}=A\mathcal{V}=\{Av|v\in\mathcal{V}\}$.
 \end{definition}
 
-We have seen that by left multiplying $\mathcal{R}(A,B)$ by $A$, we get a subspace which is already included in $\mathcal{R}(A,B)$. This leads to an important property of some subspaces.
+We have seen that by left multiplying $\mathcal{R}(A,B)$ by $A$, we obtain a subspace which is already included in $\mathcal{R}(A,B)$. This leads to an important property of some subspaces.
 
 \begin{definition}
 	Let $V$ be a vector space, $W$ be its subspace and let $f$ be a mapping from $V$ to $V$. We call $W$ an \termdef{invariant subspace} of $f$ if $f(W)\subseteq W$. We also say that $W$ is \termdef{$f$-invariant}. 
@@ -449,16 +442,6 @@ We will now show that the condition for controllability of discrete-time systems
 	Let us have a vector function $v(t)\colon\R\to\K^n$. Then the definite integral of the function on an interval $[a,b]$, $a,b\in\R$ is
 	$$\int_a^bv(t)dt=\left(\int_a^bv_1(t)dt\ ,\ \ldots\ ,\ \int_a^bv_n(t)dt\right)^T\ .$$
 \end{definition}
-
-\begin{lemma}
-\label{lem:matrixTimesVectorDerivative}
-	For a matrix function $A(t)\colon\R\to\K^{n\times m}$ and a vector function $v(t)\colon\R\to\K^m$ it holds 
-	$$\frac{d}{dt}\left(A(t)v(t)\right)=\left(\frac{d}{dt}A(t)\right)v(t)+A(t)\frac{d}{dt}v(t)$$
-\end{lemma}
-
-\begin{proof}
-	Can be simply shown by rewriting the vector $A(t)v(t)$ elementwise.
-\end{proof}
 
 We utilize the matrix exponential in solving the inhomogeneous linear system $\dot{x}(t)=Ax(t)+Bu(t)$. By left multiplying it by $e^{-tA}$ we get
 \begin{align*}
@@ -509,13 +492,28 @@ Now it is clear that in the system where $x(0)=\nullvector$, the state in time $
 		=\int^t_0\sum^\infty_{k=0}\sum^m_{j=1}\frac{(t-s)^k}{k!}\alpha^{(k)}_{i,j}u_j(s)ds\ .
 	$$
 	
-	Now, in order to be able to modify this expression, we will prove that the series $\sum^\infty_{k=0}\frac{(t-s)^k}{k!}\alpha^{(k)}_{i,j}u_j(s)$ is absolutely convergent for every position $(i, j)$. Following from Lemma \ref{lem:elementAbsoluteSize}, we have
+	Now, in order to be able to modify this expression, we will prove that the series $\sum^\infty_{k=0}\frac{(t-s)^k}{k!}\alpha^{(k)}_{i,j}u_j(s)$ is uniformly convergent on $[0,t]$ for every position $(i, j)$. Since $u(s)$ is continuous on $[0,t]$, there exists $K\in\R^+$ such that $\forall s\in [0,t]\colon\abs{f(s)} \leq K$. Therefore, following from Lemma \ref{lem:elementAbsoluteSize}, it holds
 	\begin{equation*}
-		\sum^N_{k=0}\abs{\frac{(t-s)^k}{k!}\alpha_{i,j}^{(k)}u_j(s)}\leq \sum^N_{k=0}\frac{\abs{t-s}^k}{k!}\abs*{\alpha_{i,j}^{(k)}}\abs*{u_j(s)}\leq\abs*{u_j(s)}\norm{B}_F\sum^N_{k=0}\frac{\norm{(t-s)A}_F^k}{k!}\ .
+		\sigma_k=
+		\sup_{x\in[0,t]}\abs{\frac{(t-s)^k}{k!}\alpha_{i,j}^{(k)}u_j(s)}
+		\leq
+		\frac{t^k}{k!}\abs*{\alpha_{i,j}^{(k)}}\abs{u_j(s)}
+		\leq
+		K\frac{\norm{tA}^k_F}{k!}\ .
 	\end{equation*}
-	This gives us
-	$$\sum^\infty_{k=0}\abs{\frac{(t-s)^k}{k!}\alpha_{i,j}^{(k)}u_j(s)}=\lim_{N\to\infty}\sum^N_{k=0}\abs{\frac{(t-s)^k}{k!}\alpha_{i,j}^{(k)}u_j(s)}\leq \abs*{u_j(s)}\norm{B}_Fe^{\norm{(t-s)A}_F}\ .$$
-	Because of the absolute convergence, we can now swap the integral and the series:
+	Since 
+	$$\sum_{n=0}^\infty\sigma_n
+	\leq
+	\sum_{n=0}^\infty K\frac{\norm{tA}^n_F}{n!}
+	=
+	Ke^{\norm{tA}_F}
+	<
+	\infty
+	\ ,
+	$$
+	by Weierstrass criterion is the series $\sum^\infty_{k=0}\frac{(t-s)^k}{k!}\alpha^{(k)}_{i,j}u_j(s)$ uniformly convergent on $[0,t]$ for every position $(i, j)$. 
+
+	Because of the uniform convergence, we can now swap the integral and the series:
 	\begin{align*}
 		x_i(t)
 		&=\int^t_0\sum^\infty_{k=0}\sum^m_{j=1}\frac{(t-s)^k}{k!}\alpha^{(k)}_{i,j}u_j(s)ds
